@@ -20,6 +20,8 @@ http://dev.openguides.org/log/trunk
           someone tries to view a nonexistent node.
         Validate input geodata (#22)
         List all contributors in RDF version of nodes (#106).
+        The "Look for nearby geocaches" preference and link now actually work
+          (#216).
 
 0.60    13 May 2007
         Removed footer search from edit page (shouldn't have been there).
